--- a/README.html
+++ b/README.html
@@ -746,6 +746,8 @@ Those are the same found in the <a href="#default-configuration">default configu
       acc -F "file1" "file2" "fileN" ... (install multiple zips)
       acc -F "/sdcard/Download/Magisk-v20.0(20000).zip"</p>
 
+<p>-h|--help [[editor] [editor_opts] | g for GUI]   Print this help text, plus the config</p>
+
 <p>-H|--health <mAh>   Print estimated battery health</p>
 
 <p>-i|--info [case insensitive egrep regex (default: ".")]   Show battery info
