resume_temp and cooldown_temp optionally override resume_capacity

--- a/README.html
+++ b/README.html
@@ -248,7 +248,7 @@ In interactive mode, it also asks the user whether they want to download and ins
 
 <h1>DC</h1>
 
-<p>configVerCode=202308170</p>
+<p>configVerCode=202309100</p>
 
 <p>ampFactor=
 battStatusWorkaround=true
@@ -576,7 +576,8 @@ voltFactor=</p>
 
 <p>// Those two work together and are NOT tied to the cooldown cycle.
 // At max<em>temp, charging is paused.
-// Charging resumes at resume</em>temp, as long as other conditions (e.g., resume<em>capacity) are also met. To always override resume</em>capacity add r, as in resume_temp=25r.</p>
+// Charging resumes at resume</em>temp, as long as other conditions (e.g., resume<em>capacity) are also met.
+// To always override resume</em>capacity append r, as in resume<em>temp=25r. With this, if cooldown is enabled, charging will also resume at the cooldown</em>temp threshold.</p>
 
 <p>// off<em>mid (om) # Default: true
 // Whether to turn off charging after rebooting the system or restarting accd, if capacity is within resume</em>capacity and pause_capacity.</p>
