Implement KaiOS support

--- a/README.html
+++ b/README.html
@@ -139,7 +139,7 @@ As the project gets bigger and more popular, the need for coffee goes up as well
 
 <ul>
 <li><a href="https://batteryuniversity.com/article/bu-808-how-to-prolong-lithium-based-batteries">Must read - how to prolong lithium ion batteries lifespan</a></li>
-<li>Android or Android based OS</li>
+<li>Android or KaiOS</li>
 <li>Any root solution (e.g., <a href="https://github.com/topjohnwu/Magisk">Magisk</a>)</li>
 <li><a href="https://github.com/Magisk-Modules-Repo/busybox-ndk">Busybox*</a> (only if not rooted with Magisk)</li>
 <li>Non-Magisk users can enable acc auto-start by running /data/adb/vr25/acc/service.sh, a copy of, or a link to it - with init.d or an app that emulates it.</li>
