--- a/README.html
+++ b/README.html
@@ -60,7 +60,6 @@
 <li><a href="#tips">TIPS</a>
 <ul>
 <li><a href="#always-limit-the-charging-current-if-your-battery-is-old-andor-tends-to-discharge-too-fast"><em>Always</em> Limit the Charging Current If Your Battery is Old and/or Tends to Discharge Too Fast</a></li>
-<li><a href="#current-and-voltage-based-charging-control">Current and Voltage Based Charging Control</a></li>
 <li><a href="#generic">Generic</a></li>
 <li><a href="#google-pixel-devices">Google Pixel Devices</a></li>
 <li><a href="override_battery_mah_capacity">Override Battery mAh Capacity</a></li>
@@ -296,14 +295,9 @@ voltFactor=</p>
 <p>// Do not feel like you must configure everything!
 // Do not change what you don't understand.</p>
 
-<p>// NOTES</p>
+<p>// NOTE</p>
 
-<p>// The daemon does not have to be restarted after making changes to this file - unless one of the changes is charging_switch.</p>
-
-<p>// A change to current_workaround (cw) only takes effect after an acc [re]initialization.
-// Install, upgrade, "accd --init" and system reboot actions always [re]initialize acc.</p>
-
-<p>// If those 2 variables are updated with "acc --set" (does NOT apply to acca --set), accd is restarted automatically (--init is implied, as needed).</p>
+<p>// The daemon does not have to be restarted to apply changes. It picks them up automatically within seconds.</p>
 
 <p>// INTERNAL FUNCTIONS</p>
 
@@ -362,7 +356,7 @@ voltFactor=</p>
 
 <p>// capacity=(shutdown<em>capacity=INT cooldown</em>capacity=INT resume<em>capacity=INT pause</em>capacity=INT capacity<em>sync=auto|true|false capacity</em>mask=BOOLEAN)</p>
 
-<p>// chargingSwitch=charging<em>switch=([CTRL</em>FILE1 ON OFF [CTRL_FILE2 ON OFF...] [--] | MILLIAMPS | 3700-4300 MILLIVOLTS]) NULLABLE</p>
+<p>// chargingSwitch=charging<em>switch=([CTRL</em>FILE1 ON OFF [CTRL_FILE2 ON OFF...] [--]]) NULLABLE</p>
 
 <p>// cooldownCurrent=cooldown_current=MILLIAMPS NULLABLE</p>
 
@@ -500,15 +494,6 @@ voltFactor=</p>
 <p>// This automated process can be disabled by appending " --" to the switch/group.
 // e.g., acc -s s="battery/charging_enabled 1 0 --"
 // "acc -ss" always appends " --".</p>
-
-<p>// charging_switch=milliamps (e.g., 0-250) enables current-based charging control.
-// If charging switch is set to 3700-4300 (millivolts), acc stops charging by limiting voltage.
-// For details, refer to the readme's tips section.</p>
-
-<p>// Unlike the original variant, this kind of switch is never unset automatically.
-// Thus, in this case, appending " --" to it leads to invalid syntax.</p>
-
-<p>// Unless charging is enabled first, a daemon restart is required after changing this setting (automated by "acc --set" (synchronous), but not by "acca --set" (asynchronous)).</p>
 
 <p>// cooldown<em>capacity (cc) # Default: 50
 // Battery level or millivolts at which the cooldown cycle starts.
@@ -1306,15 +1291,6 @@ Alternatively, a <em>compressed</em> archive of translated <code>strings.sh</cod
 <p>500mA is a comfortable minimum - and also very compatible.</p>
 
 <p>If your device does not support custom current limits, use a dedicated ("slow") power adapter.</p>
-
-<h3>Current and Voltage Based Charging Control</h3>
-
-<p>Enabled by setting charging<em>switch=milliamps or charging</em>switch=3700-4300 (millivolts) (e.g., <code>acc -s s=0</code>, <code>acc -s s=250</code>, <code>acc -s s=3900</code>, <code>acc -ss</code> (wizard)).</p>
-
-<p>Essentially, this turns current/voltage control files into <em>[pseudo] charging switches</em>.
-Alternatively, one can set a specific current or voltage regulator as charging switch (e.g., acc -s s="battery/current_max 3000000 0").</p>
-
-<p>Note: depending on the device - at <code>pause_capacity</code>, the charging status may either change ("Discharging" or "Idle" ("Not charging") or remain still ("Charging" -- not an issue).</p>
 
 <h3>Generic</h3>
 
