Refactor --readme option

--- a/README.html
+++ b/README.html
@@ -779,7 +779,7 @@ Those are the same found in the <a href="#default-configuration">default configu
       acc -p /sdcard/power</em>supply-harpia.log   Parse the given file and print potential charging switches that are not already in /ch-switches
       acc -p /sdcard/charging-switches.txt /sdcard/power<em>supply-harpia.log   Parse /sdcard/power</em>supply-harpia.log and print potential charging switches absent from /sdcard/charging-switches.txt</p>
 
-<p>-r|--readme   Open the manual</p>
+<p>-r|--readme [g for GUI]]   Open the manual</p>
 
 <p>-R|--resetbs   Reset battery stats
     e.g., acc -R</p>
