--- a/README.html
+++ b/README.html
@@ -1089,7 +1089,7 @@ It picks up new changes within seconds.</p>
 
 <h2>TROUBLESHOOTING</h2>
 
-<h2>acc -t Results Are Inconsistent</h2>
+<h3>acc -t Results Are Inconsistent</h3>
 
 <p>Refer to "default config > batt<em>status</em>workaround".</p>
 
@@ -1104,7 +1104,7 @@ Refer to the <a href="#default-configuration">default configuration</a> section 
 
 <h3>Charging Switch</h3>
 
-<p>By default, ACC uses whichever <a href="https://github.com/VR-25/acc/blob/dev/acc/charging-switches.txt">charging switch</a> works ("automatic" mode).
+<p>By default, ACC uses whichever <a href="https://github.com/VR-25/acc/blob/dev/acc/install/ctrl-files.sh">charging switch</a> works ("automatic" mode).
 However, things don't always go well.</p>
 
 <ul>
