Set acc -w default refresh rate to 1 second

--- a/README.html
+++ b/README.html
@@ -1971,7 +1971,7 @@ Options
 
   -w#|--watch#   Monitor battery uevent
     e.g.,
-      acc -w (update info every 3 seconds)
+      acc -w (update info every second)
       acc -w0.5 (update info every half a second)
       acc -w0 (no extra delay)
 
