Support "," in place of "|" for egrep patterns

--- a/README.html
+++ b/README.html
@@ -1846,7 +1846,7 @@ Options
     e.g.,
       acc -i
       acc -i volt
-      acc -i &#39;volt\|curr&#39;
+      acc -i volt,curr (multiple patterns)
 
   -l|--log [-a|--acc] [[editor] [editor_opts] | g for GUI]   Print/edit accd log (default) or acc log (-a|--acc)
     e.g.,
@@ -1903,6 +1903,7 @@ Options
     e.g.,
       acc -s d (print entire defaul config)
       acc -s d cap (print only entries matching &quot;cap&quot;)
+      acc -s cap,temp (multiple patterns)
 
   -sd [egrep regex (default: &quot;.&quot;)]   Same as above
 
@@ -1953,7 +1954,7 @@ Options
   -T|--logtail   Monitor accd log (tail -F)
     e.g., acc -T
 
-  -u|--upgrade [-c|--changelog] [-f|--force] [-k|--insecure] [-n|--non-interactive]   Online upgrade/downgrade
+  -u|--upgrade [-c|--changelog] [-f|--force] [-n|--non-interactive]   Online upgrade/downgrade
     e.g.,
       acc -u dev (upgrade to the latest dev version)
       acc -u (latest version from the current branch)
@@ -1969,11 +1970,12 @@ Options
   -v|--version   Print acc version and version code
     e.g., acc -v
 
-  -w#|--watch#   Monitor battery uevent
+  -w[#]|--watch[#] [pattern1,pattern2,...]   Monitor battery uevent
     e.g.,
       acc -w (update info every second)
       acc -w0.5 (update info every half a second)
       acc -w0 (no extra delay)
+      acc -w curr,volt
 
 
 Exit Codes
