[Refactor] -b[c] restores previous installation; "c" includes the config

--- a/README.html
+++ b/README.html
@@ -1802,7 +1802,7 @@ Usage
 
 Options
 
-  -b|--rollback   Undo upgrade
+  -b[c | &quot; c&quot;]|--rollback[c | &quot; c&quot;]   Restore previous installation; &quot;c&quot; restores the config as well
 
   -c|--config [[editor] [editor_opts] | g for GUI]   Edit config (default editor: nano/vim/vi)
     e.g.,
