--- a/README.html
+++ b/README.html
@@ -1926,11 +1926,11 @@ Options
       acc -e 30m (recharge for 30 minutes)
       acc -e 4000mv (recharge to 4000mV)
 
-  -f|--force|--full [capacity] [additional options and args]   Charge once to a given capacity (default: 100%), without restrictions
+  -f|--force|--full [capacity] [-s | --set ...]   Charge once to a given capacity (default: 100%), without restrictions
     e.g.,
       acc -f 95 (charge to 95%)
       acc -f (charge to 100%)
-      acc -f -sc 500 (charge to 100% with a 500 mA limit)
+      acc -f -s mcc=500 (charge to 100% with a 500 mA limit)
 
   -F|--flash [&quot;zip_file&quot;]   Flash any zip files whose update-binary is a shell script
     e.g.,
